--- a/Tester/src/com/epam/tester/server/config/db.properties
+++ b/Tester/src/com/epam/tester/server/config/db.properties
@@ -1,4 +1,4 @@
 username=root
-password=
+password=root
 url=jdbc:mysql://localhost/Tester?useUnicode=true&characterEncoding=utf8
 driver=com.mysql.jdbc.Driver
